# Agri-Advisor-RL-Env

./: Dockerfile  README.md  app.py  baseline_agent.py  env.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
data/: crops.json
server/: app.py
