[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmer-advisory-env"
version = "0.1.0"
description = "Autonomous Agri-Advisor RL System"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "gradio",
    "fastapi",
    "uvicorn",
    "requests",
    "numpy",
    "pandas",
    "gymnasium",
    "openenv>=0.2.0"
    "openai"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
packages = { find = {} }
