[project]
name = "farmer-env"
version = "0.1.0"
description = "Autonomous Agri-Advisor RL System for Meta PyTorch Hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "requests",
    "openai>=1.0.0",
    "openenv>=0.1.13",
    "numpy",
    "pandas"
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
