[project]
name = "farmer-env"
version = "0.1.0"
description = "Autonomous Agri-Advisor RL System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "requests",
    "openai>=1.0.0",
    "openenv>=0.1.13",
    "numpy",
    "pandas",
    "gymnasium"
]

[project.scripts]
server = "app:main"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
